--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
 
     <script src="./scripts/myTools.js"></script>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
